kubernetes/apps/observability/kube-prometheus-stack/securitypolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: alertmanager
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kube-prometheus-stack-alertmanager
  oidc:
    provider:
      issuer: "https://id.${ROOT_DOMAIN}"
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: pocket-id
          namespace: security
          port: 443
    clientIDRef:
      group: ""
      kind: Secret
      name: alertmanager-oidc-credentials
    clientSecret:
      group: ""
      kind: Secret
      name: alertmanager-oidc-credentials
    redirectURL: "https://alertmanager.${ROOT_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prometheus
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kube-prometheus-stack-prometheus
  oidc:
    provider:
      issuer: "https://id.${ROOT_DOMAIN}"
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: pocket-id
          namespace: security
          port: 443
    clientIDRef:
      group: ""
      kind: Secret
      name: prometheus-oidc-credentials
    clientSecret:
      group: ""
      kind: Secret
      name: prometheus-oidc-credentials
    redirectURL: "https://prometheus.${ROOT_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
