kubernetes/apps/observability/kube-prometheus-stack/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager-egress-internal
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: alertmanager
    egress:
      - toFQDNs:
          - matchName: hc-ping.com
        toPorts:
          - ports:
              - port: "443"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-cluster
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - kube-prometheus-stack-prometheus-operator
          - kube-state-metrics
          - prometheus
  egress:
    - toEntities:
        - cluster
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: prometheus
    egress:
      - toFQDNs:
          - matchName: nas.internal
        toPorts:
          - ports:
              - port: "9100"
              - port: "9633"
      - toFQDNs:
          - matchPattern: "*.internal"
        toPorts:
          - ports:
              - port: "80"
      - toFQDNs:
          - matchName: "bao.${ROOT_DOMAIN}"
          - matchName: "traefik.${ROOT_DOMAIN}"
        toPorts:
          - ports:
              - port: "443"
